--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,7 +1,8 @@
 
 .header {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  align-items: center; }
 
 .nav > li {
   display: inline-block; }
@@ -15,12 +16,18 @@
 
 body {
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  font-size: 14px; }
 
 .violet-section, .home {
   background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%);
   background-size: cover;
   background-position: center; }
+
+.content, .home .home-content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
 
 .home {
   position: absolute;
@@ -28,15 +35,39 @@ body {
   height: 100vh;
   width: 100%;
   color: white; }
+  .home .home-content {
+    width: 50%;
+    margin: 16% auto;
+    letter-spacing: 0.7px;
+    text-align: center; }
+    .home .home-content h1 {
+      font-size: 32px; }
 
 .slider {
   width: 100%;
   height: 100vh;
   position: absolute;
   z-index: -1;
-  top: 0; }
+  top: 0;
+  overflow: hidden; }
   .slider img {
     height: 100vh;
-    max-width: 100%;
+    min-width: 100%;
     z-index: -2;
     position: absolute; }
+
+.slider-button {
+  position: absolute;
+  bottom: 0; }
+  .slider-button li {
+    list-style: none;
+    display: inline-block; }
+    .slider-button li button {
+      width: 10px;
+      height: 10px;
+      padding: 0;
+      border-radius: 30px;
+      background: none;
+      border: 1px solid #c2c2c2; }
+    .slider-button li button:hover {
+      background-color: #00e0d0; }
