--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -1,8 +1,14 @@
 body
   padding: 0
   margin: 0
+  font-size: 14px
 
 .violet-section
   background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%)
   background-size: cover
   background-position: center
+
+.content
+  display: flex
+  justify-content: center
+  flex-wrap: wrap
