--- a/app/style/home.sass
+++ b/app/style/home.sass
@@ -7,14 +7,11 @@
   width: 100%
   color: white
 
-.slider
-  width: 100%
-  height: 100vh
-  position: absolute
-  z-index: -1
-  top: 0
-  img
-    height: 100vh
-    max-width: 100%
-    z-index: -2
-    position: absolute
+  .home-content
+    @extend .content
+    width: 50%
+    margin: 16% auto
+    letter-spacing: 0.7px
+    text-align: center
+    h1
+      font-size: 32px
