--- a/app/style/slider.sass
+++ b/app/style/slider.sass
@@ -12,6 +12,7 @@
     position: absolute
 
 .slider-button
+  padding: 0
   position: absolute
   bottom: 0
   li
@@ -26,4 +27,3 @@
       border: 1px solid #c2c2c2
     button:hover
       background-color: #00e0d0
-
