--- a/app/css/style.css
+++ b/app/css/style.css
@@ -29,6 +29,13 @@ body {
   justify-content: center;
   flex-wrap: wrap; }
 
+.button {
+  border: 1px solid #00e0d0;
+  background: none;
+  color: #00e0d0;
+  padding: 15px;
+  text-transform: uppercase; }
+
 .home {
   position: relative;
   z-index: 1;
@@ -42,6 +49,22 @@ body {
     text-align: center; }
     .home .home-content h1 {
       font-size: 32px; }
+
+.our-story {
+  display: flex;
+  align-items: center;
+  padding: 8em;
+  color: #413d4b;
+  font-family: Roboto, serif;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  letter-spacing: 0.42px; }
+  .our-story ul {
+    display: flex; }
+    .our-story ul li {
+      list-style: none;
+      margin-left: 10%; }
 
 .slider {
   width: 100%;
@@ -72,3 +95,10 @@ body {
       border: 1px solid #c2c2c2; }
     .slider-button li button:hover {
       background-color: #00e0d0; }
+
+.video {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%), url("../graphics/images/put-your-image-here (1).png");
+  background-size: cover;
+  background-position: center; }
