--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -12,3 +12,10 @@ body
   display: flex
   justify-content: center
   flex-wrap: wrap
+
+.button
+  border: 1px solid #00e0d0
+  background: none
+  color: #00e0d0
+  padding: 15px
+  text-transform: uppercase
