--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -4,6 +4,8 @@ body
   font-size: 14px
 
 .violet-section
+  min-height: 100vh
+  width: 100%
   background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%)
   background-size: cover
   background-position: center
@@ -13,9 +15,17 @@ body
   justify-content: center
   flex-wrap: wrap
 
+.header
+  text-align: center
+  padding-top: 5em
+
 .button
   border: 1px solid #00e0d0
   background: none
   color: #00e0d0
   padding: 15px
   text-transform: uppercase
+.footer
+  @extend .content
+  bottom: 0
+  left: 0
