--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -14,6 +14,7 @@ body
   display: flex
   justify-content: center
   flex-wrap: wrap
+  margin-top: 5em
 
 .header
   text-align: center
@@ -25,7 +26,12 @@ body
   color: #00e0d0
   padding: 15px
   text-transform: uppercase
+
 .footer
-  @extend .content
-  bottom: 0
-  left: 0
+  display: flex
+  flex-wrap: wrap
+  justify-content: center
+  align-items: center
+  p
+    width: 100%
+    text-align: center
