--- a/app/style/meet.sass
+++ b/app/style/meet.sass
@@ -1,7 +1,15 @@
 .meet
-  height: 100vh
+  min-height: 100vh
   width: 100%
-  background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%), url("../graphics/images/put-your-image-here (2).png")
+  background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%), url("../graphic/images/put-your-image-here (2).png")
   background-size: cover
   background-position: center
   color: white
+
+.meet-icons>li
+  margin-left: 1em
+  list-style: none
+  div
+    border: 1px solid #e1e1e1
+    margin-top: -5px
+    text-align: center
