--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -16,10 +16,6 @@ body
   flex-wrap: wrap
   margin-top: 5em
 
-.header
-  text-align: center
-  padding-top: 5em
-
 .button
   border: 1px solid #00e0d0
   background: none
@@ -28,6 +24,7 @@ body
   text-transform: uppercase
 
 .footer
+  width: 100%
   display: flex
   flex-wrap: wrap
   justify-content: center
