--- a/app/style/_header.sass
+++ b/app/style/_header.sass
@@ -3,7 +3,7 @@
   justify-content: space-around
   align-items: center
 
-.nav>li
+.nav > li
   display: inline-block
   a
     text-decoration: none
@@ -12,3 +12,7 @@
     text-transform: uppercase
   a:hover
     color: #00e0d0
+
+.header
+  text-align: center
+  margin-top: 5em
