--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,42 @@
+.client {
+  width: 100%;
+  display: flex; }
+
+.form-wrap {
+  padding-right: 5em;
+  flex-basis: 40%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end; }
+
+.form {
+  width: 460px; }
+  .form li {
+    padding-top: 4em;
+    list-style: none;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    color: rgba(65, 61, 75, 0.5); }
+    .form li input {
+      width: 100%;
+      border: none; }
+    .form li textarea {
+      width: 100%;
+      border: none; }
+  .form li:first-child {
+    border: none;
+    color: #413d4b; }
+
+.our-clients {
+  width: 50%; }
+
+.partners {
+  display: flex;
+  flex-wrap: wrap;
+  flex-basis: 30%; }
+  .partners li {
+    width: 50%;
+    list-style: none; }
+
 .comments {
   display: flex;
   justify-content: center;
