--- a/app/style/comments.sass
+++ b/app/style/comments.sass
@@ -7,6 +7,9 @@
   background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%), url("../graphic/images/put-your-image-here (6).png")
   background-size: cover
   background-position: center
+  footer
+    p
+      text-align: center
 
 .quote-header
   width: 100%
