--- a/app/style/meet.sass
+++ b/app/style/meet.sass
@@ -5,8 +5,11 @@
   background-size: cover
   background-position: center
   color: white
+  footer
+    p
+      text-align: center
 
-.meet-icons>li
+.meet-icons > li
   margin-left: 1em
   list-style: none
   div
