--- a/app/style/our-story.sass
+++ b/app/style/our-story.sass
@@ -1,15 +1,16 @@
 .our-story
-  display: flex
-  align-items: center
-  padding: 8em
   color: #413d4b
   font-family: Roboto, serif
-  font-size: 14px
   font-weight: 300
   line-height: 22px
   letter-spacing: 0.42px
   ul
-    display: flex
+    display: inline-block
     li
-     list-style: none
-     margin-left: 10%
+      width: 33%
+      display: inline-block
+      list-style: none
+      margin: 5%
+
+.our-story-image
+  text-align: right
