--- a/app/style/_header.sass
+++ b/app/style/_header.sass
@@ -16,3 +16,17 @@
 .header
   text-align: center
   margin-top: 5em
+
+.logo
+  display: flex
+  align-items: center
+  background: url("../graphic/icon/logo.png")
+  width: 44px
+  height: 50px
+  a
+    color: #00e0d0
+    padding-left: 2em
+    font-family: "Roboto - Thin", serif
+    font-size: 30px
+    font-weight: 400
+    text-decoration: none
