--- a/app/style/client.sass
+++ b/app/style/client.sass
@@ -1,6 +1,7 @@
 .client
   width: 100%
   display: flex
+  flex-wrap: wrap
 .form-wrap
   padding-right: 5em
   flex-basis: 40%
@@ -27,12 +28,16 @@
     color: #413d4b
 
 .our-clients
-  width: 50%
+  margin-left: 10em
+  width: 30%
+  margin-top: 5em
 
 .partners
   display: flex
   flex-wrap: wrap
-  flex-basis: 30%
+  flex-basis: 20%
+  padding: 0
   li
+    margin-top: 3em
     width: 50%
     list-style: none
