--- a/app/style/_header.sass
+++ b/app/style/_header.sass
@@ -26,7 +26,7 @@
   a
     color: #00e0d0
     padding-left: 2em
-    font-family: "Roboto - Thin", serif
+    font-family: 'Roboto - Thin', serif
     font-size: 30px
-    font-weight: 400
+    font-weight: 100
     text-decoration: none
