--- a/app/style/comments.sass
+++ b/app/style/comments.sass
@@ -23,8 +23,9 @@
   width: 32px
 
 .comments-content
-  width: 50%
-  margin: 16% auto
+  color: rgba(255, 255, 255, 0.85)
+  width: 30%
+  margin: 4% auto
   letter-spacing: 0.7px
   text-align: center
 
