--- a/app/style/footer.sass
+++ b/app/style/footer.sass
@@ -9,6 +9,24 @@
     width: 20%
     line-height: 26px
 
+.our-studio
+  dl
+    .address
+      background: url("../graphic/icon/big104.png")
+      width: 14px
+      height: 19px
+      padding: 0
+      margin: 0
+    .phone
+      background: url("../graphic/icon/phone351.png")
+      width: 17px
+      height: 17px
+    dt
+      margin-right: 0
+    dd
+      padding: 0
+      margin: -1.5em 0 0 1.5em
+
 .logo-section-footer
   text-align: left
   ul
