--- a/app/style/our-works.sass
+++ b/app/style/our-works.sass
@@ -3,6 +3,9 @@
   width: 100%
   header
     @extend .inline-header
+    padding-top: 4em
+  footer
+    padding-bottom: 5em
 .our-works-content
   ul
     display: flex
