--- a/app/style/_main.sass
+++ b/app/style/_main.sass
@@ -17,6 +17,7 @@ body
   margin-top: 5em
 
 .button
+  font-weight: 800
   border: 1px solid #00e0d0
   background: none
   color: #00e0d0
@@ -31,3 +32,14 @@ body
   align-items: center
   p
     width: 100%
+.content-header:after
+  margin-left: 45%
+  margin-top: 1em
+  display: flex
+  content: ''
+  width: 50px
+  height: 1px
+  background-color: #00e0d0
+
+.font-decor
+  color: rgba(255, 255, 255, 0.85)
