--- a/app/style/expertise.sass
+++ b/app/style/expertise.sass
@@ -1,3 +1,4 @@
+@import "main"
 .expertise
   min-height: 100vh
   width: 100%
@@ -13,3 +14,8 @@
     flex-basis: 20%
     text-align: center
     margin: 8em 3em 0 3em
+.content-header-grey:after
+  @extend .content-header
+  background-color: #413d4b
+  margin: 1.5em auto
+  opacity: 0.3
