--- a/app/style/meet.sass
+++ b/app/style/meet.sass
@@ -1,3 +1,4 @@
+@import "expertise"
 .meet
   min-height: 100vh
   width: 100%
@@ -18,3 +19,8 @@
     border: 1px solid #e1e1e1
     margin-top: -5px
     text-align: center
+
+.meet-header-content-line:after
+  @extend .content-header-grey
+  background-color: #ffffff
+  opacity: 0.2
