--- a/app/style/_header.sass
+++ b/app/style/_header.sass
@@ -18,6 +18,7 @@
   margin-top: 5em
 
 .logo
+  margin-top: 0
   display: flex
   align-items: center
   background: url("../graphic/icon/logo.png")
