--- a/app/style/footer.sass
+++ b/app/style/footer.sass
@@ -1,13 +1,20 @@
 @import "main"
 .main-footer
+  color: rgba(255, 255, 255, 0.85)
   @extend .footer
-  color: white
   background: linear-gradient(to right, rgba(9, 5, 47, 0.85) 0%, rgba(49, 29, 94, 0.85) 100%), url("../graphic/images/put-your-image-here (12).png")
   background-size: cover
   background-position: center
   section
+    margin-top: 5em
+    padding-right: 3em
     width: 20%
     line-height: 26px
+    height: 16em
+  section:last-child
+    padding: 0
+  header
+    font-size: 15px
 
 .our-studio
   dl
@@ -39,33 +46,54 @@
         color: white
         text-decoration: none
 
+.stay-in-touch-input
+  background: none
+  border: 1px solid rgba(255, 255, 255, 0.5)
+  padding: 1em
+
+.stay-in-touch-form
+  display: flex
+  align-items: center
+
+.stay-in-touch-button
+  margin-left: 0.4em
+  background: url("../graphic/icon/paper122.png"), rgba(255, 255, 255, 0.5)
+  background-repeat: no-repeat
+  background-position: center
+  width: 70px
+  border: none
+  height: 43px
+
 .stay-in-touch-list
   display: flex
   padding: 0
   .facebook
     background: url("../graphic/social-network/2-layers.png")
     width: 36px
-    height: 36px
+    height: 37px
   .twt
     background: url("../graphic/social-network/2-layers (1).png")
     width: 36px
-    height: 36px
+    height: 37px
   .drb
     background: url("../graphic/social-network/2-layers (2).png")
     width: 36px
-    height: 36px
+    height: 37px
   .inst
     background: url("../graphic/social-network/2-layers (3).png")
     width: 36px
-    height: 36px
+    height: 37px
   .google
     background: url("../graphic/social-network/2-layers (4).png")
     width: 36px
-    height: 36px
+    height: 37px
   .youtube
     background: url("../graphic/social-network/2-layers (5).png")
     width: 36px
-    height: 36px
+    height: 37px
   li
+    margin-left: 0.2em
     list-style: none
+  li:first-child
+    margin-left: 0
 
