--- a/app/style/expertise.sass
+++ b/app/style/expertise.sass
@@ -7,8 +7,9 @@
 
 .expertise-icons
   display: flex
-  width: 90%
-  justify-content: center
+  padding: 0
+  justify-content: space-around
+  margin: 0 15em 0 15em
   li
     list-style: none
     flex-basis: 20%
